PF-008: Add nearBy endpoint
