# PersonsFinder-openapi.yaml
@@ -66,6 +66,8 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PersonDto"
+        "404":
+          description: "Not Found"
 
   /api/v1/persons/{id}/location:
     put:
@@ -91,6 +93,41 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/LocationDto"
+        "400":
+          description: "Bad Request"
+
+  /api/v1/persons/nearby:
+    get:
+      summary: "GET api/v1/persons/nearby"
+      operationId: "findNearby"
+      parameters:
+        - name: "lat"
+          in: "query"
+          required: true
+          schema:
+            type: "number"
+            format: "double"
+        - name: "lon"
+          in: "query"
+          required: true
+          schema:
+            type: "number"
+            format: "double"
+        - name: "radiusKm"
+          in: "query"
+          required: true
+          schema:
+            type: "number"
+            format: "double"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/PersonNearbyDto"
 
 components:
   schemas:
@@ -140,3 +177,15 @@ components:
         - "id"
         - "latitude"
         - "longitude"
+    PersonNearbyDto:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        distance:
+          type: "number"
+          format: "double"
+      required:
+        - "id"
+        - "distance"
